--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Module 2 Solution</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Our Menu</h1>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="box">
+          <div id="chicken" class="meal">Chicken</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+            beatae voluptatibus veniam placeat iure unde assumenda porro neque
+            voluptate esse sit magnam facilis labore odit, provident a ea!
+            Nulla, minima. Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum
+            reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus.
+            Doloribus tempora alias minima laborum, provident!
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="box">
+          <div id="beef" class="meal">Beef</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+            beatae voluptatibus veniam placeat iure unde assumenda porro neque
+            voluptate esse sit magnam facilis labore odit, provident a ea!
+            Nulla, minima. Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum
+            reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus.
+            Doloribus tempora alias minima laborum, provident!
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-12 col-sm-12">
+        <div class="box">
+          <div id="sushi" class="meal">Sushi</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+            beatae voluptatibus veniam placeat iure unde assumenda porro neque
+            voluptate esse sit magnam facilis labore odit, provident a ea!
+            Nulla, minima. Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum
+            reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus.
+            Doloribus tempora alias minima laborum, provident!
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
