--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -57,7 +57,7 @@
 
     <!-- Home page -->
     <div id="main-content" class="container">
-        <h2>Our Menu</h2>
+        <h2 class="text-center">Our Menu</h2>
     <div class="row">
       <div class="col-sm-12">
         <div class="box">
